<resources>

    <string name="app_name">Foodie</string>
    <string name="connect_button">Connect</string>
    <string name="manage_button">Manage</string>
    <string name="dispense">Dispense Food</string>
    <string name="dispenseWarningMessage">Are you sure you want to manually dispense food or water for your pet?</string>
    <string name="lowLevelWarningMessage">Food or Water Level is low. Make sure to fill up the Feeder First before Dispensing.</string>
    <string name="delete_alarm_warning">Delete This Alarm?</string>

    <!-- Days of the Week -->
    <string name="Monday">M</string>
    <string name="Tuesday">T</string>
    <string name="Wednesday">W</string>
    <string name="Thursday">TH</string>
    <string name="Friday">F</string>
    <string name="Saturday">S</string>
    <string name="Sunday">S</string>

    <!-- Button Labels -->
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="back_to_dashboard">Back to Main</string>
    <string name="open_lights">Turn On</string>
    <string name="drink">Drink</string>
    <string name="automatic">Automatic</string>
    <string name="disconnect">Disconnect</string>
    <string name="close">Close</string>
    <string name="refill">Refill</string>

    <!-- Layout Labels-->
    <string name="schedule_header">Manage Schedule</string>
    <string name="add_alarm_description">Add an Alarm</string>
    <string name="splash_screen_description">Foodie</string>
    <string name="condition">CONDITION</string>
    <string name="schedule">UPCOMING SCHEDULE</string>
    <string name="warning_icon">Low Food/Water Warning</string>
    <string name="connection_message">Currently Connected To:</string>
    <string name="wifi_icon">Wifi Icon</string>
    <string name="success_icon">Dispensing Success</string>
    <string name="dog_food_icon">Dispense Food</string>
    <string name="alarm_header">ADD AN ALARM</string>
    <string name="alarm_editor_header">Alarm Settings</string>

    <!-- Cardview Elements-->
    <string name="upcoming">Upcoming Schedule:</string>
    <string name="repeat">Repeat</string>

    <!-- AM and PM -->
    <string-array name="time">
        <item>AM</item>
        <item>PM</item>
    </string-array>


</resources>