<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:id="@+id/warningDialogFirstHalf"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/dialog_box_background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/warning"
            android:contentDescription="@string/warning_icon"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/warningDialogFirstHalf"
        android:background="@drawable/lower_dispense_dialog_box"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLowLevelWarningMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/lowLevelWarningMessage"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="@font/lexend"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirmRefill"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            app:cornerRadius="15dp"
            app:backgroundTint="@color/cancel_buttons"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_button"
            android:textAlignment="center"/>

    </LinearLayout>
    
    
    
</RelativeLayout>