<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingVertical="40dp"
    android:background="@color/card_view_color"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/lexend_bold"
        android:text="Add an alarm"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/hourPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:np_dividerColor="@color/white"
                app:np_textColor="@color/white"
                app:np_selectedTextColor="@color/white"
                app:np_textSize="30sp"
                app:np_min="1"
                app:np_max="12"/>
            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/minPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:np_dividerColor="@color/white"
                app:np_textColor="@color/white"
                app:np_selectedTextColor="@color/white"
                app:np_textSize="30sp"
                app:np_min="1"
                app:np_max="59"/>
            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/AM_PM_Picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:np_dividerColor="@color/white"
                app:np_textColor="@color/white"
                app:np_selectedTextColor="@color/white"
                app:np_textSize="30sp"
                app:np_min="1"
                app:np_max="2" />

        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Repeat"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:fontFamily="@font/lexend_bold"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:gravity="center">


            <com.google.android.material.button.MaterialButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/Sunday"
                android:textSize="20sp"
                android:id="@+id/Sunday"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/Monday"
                android:id="@+id/btnMonday"
                android:textSize="20sp"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/Tuesday"
                android:id="@+id/btnTuesday"
                android:textSize="20sp"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/Wednesday"
                android:textSize="20sp"
                android:id="@+id/btnWednesday"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:text="@string/Thursday"
                android:id="@+id/btnThursday"
                android:textSize="20sp"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/Friday"
                android:id="@+id/btnFriday"
                android:textSize="18sp"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/Saturday"
                android:id="@+id/btnSaturday"
                android:textSize="20sp"/>



        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancelAlarm"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:text="CANCEL"
                    android:textSize="20sp"
                    app:backgroundTint="@color/button_color"
                    app:cornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.137"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAddAlarm"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:text="CONFIRM"
                    android:textSize="20sp"
                    app:cornerRadius="10dp"
                    app:backgroundTint="@color/button_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.877"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>


    </LinearLayout>




</LinearLayout>