<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainAppColor">

    <TextView
        android:id="@+id/tvAlarmEditHeader"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:layout_marginBottom="5dp"
        android:text="EDIT ALARM"
        android:textColor="@color/card_view_color"
        android:textSize="20sp"
        android:fontFamily="@font/lexend_bold"/>
    <LinearLayout
        android:id="@+id/llAlarmEditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:layout_below="@id/tvAlarmEditHeader">

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/hourPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:np_dividerColor="@color/white"
            app:np_textColor="@color/card_view_color"
            app:np_selectedTextColor="@color/card_view_color"
            app:np_textSize="35sp"
            app:np_dividerThickness="0dp"
            app:np_min="1"
            app:np_max="12"
            app:np_selectedTextSize="35sp"/>
        <androidx.cardview.widget.CardView
            android:layout_width="4dp"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/card_view_color"
            android:layout_marginHorizontal="15dp"/>
        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/minPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:np_dividerColor="@color/white"
            app:np_textColor="@color/card_view_color"
            app:np_selectedTextColor="@color/card_view_color"
            app:np_textSize="35sp"
            app:np_dividerType="side_lines"
            app:np_dividerThickness="0dp"
            app:np_min="1"
            app:np_max="59"
            app:np_selectedTextSize="35sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            app:cardBackgroundColor="@color/card_view_color" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/AM_PM_Picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:np_max="2"
            app:np_min="1"
            app:np_dividerThickness="0dp"
            app:np_dividerColor="@color/white"
            app:np_textColor="@color/card_view_color"
            app:np_selectedTextColor="@color/card_view_color"
            app:np_textSize="35sp"
            app:np_selectedTextSize="35sp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvDayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/llAlarmEditor"
        android:text="DAY"
        android:textColor="@color/card_view_color"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/llButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/tvDayLabel"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/Sunday"
            style="@style/DayButtonBackground"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/Sunday"
            android:textSize="20sp"
            app:cornerRadius="30dp"
            app:elevation="10dp"/>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMonday"
            style="@style/DayButtonBackground"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/Monday"
            android:textSize="20sp"
            app:cornerRadius="30dp"
            app:elevation="10dp"/>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTuesday"
            style="@style/DayButtonBackground"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/Tuesday"
            android:textSize="20sp"
            app:cornerRadius="30dp"
            app:elevation="10dp"/>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnWednesday"
            style="@style/DayButtonBackground"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/Wednesday"
            android:textSize="20sp"
            app:cornerRadius="30dp"
            app:elevation="10dp"/>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnThursday"
            style="@style/DayButtonBackground"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:text="@string/Thursday"
            android:textSize="20sp"
            app:cornerRadius="30dp"
            app:elevation="10dp"/>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFriday"
            style="@style/DayButtonBackground"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/Friday"
            android:textSize="18sp"
            app:cornerRadius="30dp"
            app:elevation="10dp"/>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaturday"
            style="@style/DayButtonBackground"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/Saturday"
            android:textSize="20sp"
            app:cornerRadius="30dp"
            app:elevation="10dp"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDiscardEdit"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/llButtonContainer"
        android:text="Discard"
        app:elevation="10dp"
        app:cornerRadius="20dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveAlarmEdit"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@id/llButtonContainer"
        android:layout_marginTop="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginHorizontal="40dp"
        android:text="Save"
        app:elevation="10dp"
        app:cornerRadius="20dp"
        />
        <com.google.android.material.button.MaterialButton
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_below="@id/btnDiscardEdit"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            app:cornerRadius="20dp"
            app:elevation="10dp"
            app:backgroundTint="@color/red"
            android:text="Delete Alarm" />
</RelativeLayout>