<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainAppColor"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_alignParentTop="true"
        android:id="@+id/scheduleHeader">

        <Button
            android:id="@+id/btnBackButton"
            android:layout_width="54dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_to_dashboard"
            android:drawableLeft="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lexend_bold"
            android:padding="10dp"
            android:text="@string/schedule_header"
            android:textColor="@color/card_view_color"
            android:textSize="20sp" />
    </LinearLayout>
    <ScrollView
        android:id="@+id/svAlarmScrollable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scheduleHeader"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAlarmSchedule"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginHorizontal="20dp"
                android:elevation="10dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/card_view_color"
                app:cardCornerRadius="20dp"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:id="@+id/rlAlarmContainer">

                    <TextView
                        android:id="@+id/tvAssignedTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/lexend"
                        android:text="00:00"
                        android:textColor="@color/white"
                        android:textSize="30sp" />
                    <TextView
                        android:id="@+id/tvAssignedDay"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_below="@+id/tvAssignedTime"
                        android:text="Day Indicated"
                        android:textSize="15sp"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/scheduleSwitch"
                        android:layout_width="167dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:thumb="@drawable/thumb"
                        app:track="@drawable/track" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>
    <ImageButton
        android:id="@+id/btnAddAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:contentDescription="@string/add_alarm_description"
        android:src="@drawable/add_schedule"
        android:background="@null"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        />






</RelativeLayout>
